# orange-pi-mindspore

./: README.md  start_notebook.sh
Offline/: README.md
Offline/04-CycleGAN/: main_cyclegan.ipynb
Offline/05-Shufflenet/: main_shufflenet.ipynb
Offline/06-FCN/: main_fcn.ipynb
Offline/community/: README.md
Offline/community/RingMoE-Classification/: README.md  eval.py  prepare.sh
Offline/inference/01-CNNCTC/: env.sh  main_cnnctc.ipynb
Offline/inference/02-ResNet50/: main_resnet50.ipynb
Offline/inference/03-HDR/: main_hdr.ipynb
Offline/inference/06-FCN/: main_fcn.ipynb
Offline/inference/07-Pix2Pix/: main_pix2pix.ipynb
Offline/inference/ros2_robot_arm/: README.md  requirements.txt  setenv.sh
Offline/inference/ros2_robot_arm/ros2_ws/src/dofbot_moveit/: CMakeLists.txt  package.xml
Offline/inference/ros2_robot_arm/ros2_ws/src/dofbot_moveit/config/: server_param.yaml
Offline/inference/ros2_robot_arm/ros2_ws/src/dofbot_moveit/launch/: dofbot_moveit.launch.py
Offline/inference/ros2_robot_arm/ros2_ws/src/dofbot_moveit/rviz/: dofbot.rviz
Offline/inference/基于昇思MindSpore+Orangepi AIpro的训推全流程指导书(离线推理)/: ~$昇思MindSpore+Orangepi AIpro的ResNet50图像分类训推全流程.docx
Online/: README.md
Online/01-quick start/: mindspore_quick_start.ipynb  mindspore_quick_start_pynative.ipynb
Online/02-ResNet50/: mindspore_resnet50.ipynb  mindspore_resnet50_pynative.ipynb
Online/03-ViT/: mindspore_vit.ipynb
Online/04-FCN/: mindspore_fcn8s.ipynb
Online/05-ShuffleNet/: mindspore_shufflenet.ipynb
Online/06-SSD/: mindspore_ssd.ipynb
Online/07-RNN/: mindspore_sentiment_analysis.ipynb
Online/08-LSTM+CRF/: mindspore_sequence_labeling.ipynb
Online/09-GAN/: mindspore_gan.ipynb
Online/10-DCGAN/: mindspore_dcgan.ipynb
Online/11-Pix2Pix/: mindspore_pix2pix.ipynb
Online/12-Diffusion/: mindspore_diffusion.ipynb
Online/13-ResNet50_transfer/: mindspore_transfer_learning.ipynb
Online/14-qwen1.5-0.5b/: qwen1.5-0.5b.ipynb  qwen1.5-0.5b.py  昇思MindSpore香橙派qwen聊天机器人指导手册.md
Online/15-tinyllama/: app.py
Online/17-DeepSeek-R1-Distill-Qwen-1.5B/: deepseek-r1-distill-qwen-1.5b.py
Online/18-RoBERTaNER/: README.md  mindspore_roberta_ner.ipynb
Online/19-MiniCPM3/: minicpm3.ipynb  minicpm_gradio.py
Online/community/: README.md
Online/community/01-Document Question Answering/: document question answer.ipynb
Online/community/03-Image Classification/: image classification.ipynb
Online/community/04-Object-Detection/: README.md  object_detection.ipynb
Online/community/06-Image-to-Text/: README.md  image_to_text.ipynb
Online/community/07-Video-Classification/: README.md  video_classification.ipynb
Online/community/18-Text-Ranking/: README.md  test.docx  text-ranking.ipynb
Online/community/Depth-Estimation/: Depth-estimation.ipynb  README.md
Online/community/DepthEstimation/: README.md
Online/community/DocumentQuestionAnswering/: README.md  document question answer.ipynb
Online/community/FeatureExtraction/: README.md  mindspore_feature_extraction.ipynb
Online/community/ImageClassification/: README.md  image classification.ipynb
Online/community/ImageToText/: README.md  image_to_text.ipynb
Online/community/MaskGeneration/: README.md  mindspore_mask_generation.ipynb
Online/community/ObjectDetection/: README.md  mindspore_object_detection.ipynb  object_detection.ipynb
Online/community/QuestionAnswering/: README.md  基于Qwen1.5-0.5b的问答系统.ipynb
Online/community/RingMoE-Classification/: README.md  eval.py  prepare.sh
Online/community/RoBERTaNER/: mindspore_roberta_ner.ipynb
Online/community/SentenceSimilarity/: README.md  mindspore_sentence_similarity.ipynb
Online/community/Summarization/: README.md  mindspore_summarization.ipynb
Online/community/TableQuestionAnswering/: README.md  mindspore_table_question_answering.ipynb
Online/community/Text Classification/: README.md  text_classification.ipynb
Online/community/TextClassification/: README.md  text_classification.ipynb
Online/community/TextRanking/: README.md  test_01.txt  text-ranking.ipynb
Online/community/TokenClassification/: README.md  mindspore_token_classification.ipynb
Online/community/Translation/: README.md  mindspore_translation.ipynb
Online/inference/: README.md
Online/training/: README.md
OpsDevTemplate/: .gitignore  .gitmodules  LICENSE  README.md  README.zh.md
OpsDevTemplate/ascend_c_ops_dev/: AscendEnvTestScript.sh  README.md
OpsDevTemplate/ascend_c_ops_dev/2.cubeParadigm/MatmulCustomMultiCore/framework/tf_plugin/: CMakeLists.txt  tensorflow_matmul_custom_plugin.cc
OpsDevTemplate/ascend_c_ops_pybind11/PyTorchNPU/: CMakeLists.txt  README.md  add_custom.cpp  add_custom_test.py  pybind11.cpp  run.sh
OpsDevTemplate/cpp_ops/: CMakeLists.txt  README.md  setup.py
OpsDevTemplate/cpp_ops/src/: my_mindspore_ops_binder.cpp  my_mindspore_ops_impl.cpp  my_mindspore_ops_interface.hpp
OpsDevTemplate/cpp_ops/test/: test_ops.py
infer/01-SSD/: main_ssd.ipynb
infer/02-CNNCTC/: main_cnnctc.ipynb
infer/03-ResNet50/: main_resnet50.ipynb
infer/04-HDR/: main_hdr.ipynb
infer/05-CycleGAN/: main_cyclegan.ipynb
infer/06-Shufflenet/: main_shufflenet.ipynb
infer/07-FCN/: main_fcn.ipynb
infer/08-Pix2Pix/: main_pix2pix.ipynb
llm/qwen1.5-0.5b/: 昇思MindSpore香橙派qwen聊天机器人指导手册.md  昇思MindSpore香橙派体验指导手册.docx
test/: README.md  test_mint.py  test_mint_ms2.5.py  test_mint_ms2.6.py
tutorial/01-quick start/: mindspore_quick_start.ipynb
tutorial/02-ResNet50/: mindspore_resnet50.ipynb
tutorial/03-ViT/: mindspore_vit.ipynb
tutorial/04-FCN/: mindspore_fcn8s.ipynb
tutorial/05-ShuffleNet/: mindspore_shufflenet.ipynb
tutorial/06-SSD/: mindspore_ssd.ipynb
tutorial/07-RNN/: mindspore_sentiment_analysis.ipynb  mindspore_sentiment_analysis_predict.ipynb
tutorial/08-LSTM+CRF/: mindspore_sequence_labeling.ipynb
tutorial/09-GAN/: mindspore_gan.ipynb
tutorial/10-DCGAN/: mindspore_dcgan.ipynb
tutorial/11-Pix2Pix/: mindspore_pix2pix.ipynb
tutorial/13-Diffusion/: mindspore_diffusion.ipynb
tutorial/13-ResNet50_transfer/: mindspore_transfer_learning.ipynb
(+147 files in other folders)
